-Display the date in a snack bar when the user selects a date

--- a/AndrewAssign33/src/main/res/layout/fragment_tab1.xml
+++ b/AndrewAssign33/src/main/res/layout/fragment_tab1.xml
@@ -14,26 +14,25 @@
         android:layout_height="54dp"
 
         android:gravity="center"
-        android:text="hello andrew"
+        android:text="@string/tab1Text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.088" />
+        app:layout_constraintVertical_bias="0.023" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="197dp"
-        android:layout_height="244dp"
+        android:layout_width="201dp"
+        android:layout_height="161dp"
 
         android:src="@mipmap/random1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.542"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.383" />
+        app:layout_constraintVertical_bias="0.654" />
 
     <Button
         android:id="@+id/button"
@@ -46,5 +45,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.871" />
+
+    <DatePicker
+        android:id="@+id/datePicker"
+        android:layout_width="329dp"
+        android:layout_height="275dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.187" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
