-add french language

--- a/AndrewAssign33/src/main/res/layout/activity_main.xml
+++ b/AndrewAssign33/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_width="106dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TABS:"
+            android:text="@string/tabs"
             android:textSize="24sp" />
 
         <com.google.android.material.tabs.TabLayout
