--- a/AndrewAssign33/src/main/res/layout/fragment_tab1.xml
+++ b/AndrewAssign33/src/main/res/layout/fragment_tab1.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#4CAF50"
     tools:context=".Andrew">
 
     <!-- TODO: Update blank fragment layout -->
@@ -38,7 +39,7 @@
         android:id="@+id/button"
         android:layout_width="145dp"
         android:layout_height="84dp"
-        android:text="Button"
+        android:text="@string/change"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
