--- a/AndrewAssign33/src/main/res/layout/fragment_tab2.xml
+++ b/AndrewAssign33/src/main/res/layout/fragment_tab2.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFEB3B"
     android:foregroundGravity="top|center"
     app:layout_anchorGravity="center|top"
     tools:context=".Fraser">
